fix: footer style on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,7 @@ body {
 }
 
 footer {
-  border-top: 1px solid rgba(0,0,0,.1);
+  border-top: 1px solid rgba(0, 0, 0, .1);
   margin-top: 30px;
   padding: 10px;
 }
@@ -68,6 +68,7 @@ footer {
   .media {
     display: inline-block;
     word-spacing: 10px;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
   }
 
   .link {
